inventory-service/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-10-14 - 00:55:07 +0000
    app.openshift.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
    app.quarkus.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: inventory
spec:
  ports:
  - name: http
    port: 8280
    targetPort: 8280
  selector:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-10-14 - 00:55:07 +0000
    app.openshift.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
    app.quarkus.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.kubernetes.io/name: inventory
  name: inventory
spec:
  replicas: 1
  selector:
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.kubernetes.io/name: inventory
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2021-10-14 - 00:55:07 +0000
        app.openshift.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
        app.quarkus.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.kubernetes.io/name: inventory
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_JAR
          value: /deployments/inventory-1.0-SNAPSHOT-runner.jar
        image: danieloh/inventory:1.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: inventory
        ports:
        - containerPort: 8280
          name: http
          protocol: TCP
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - inventory
      from:
        kind: ImageStreamTag
        name: inventory:1.0-SNAPSHOT
    type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-10-14 - 00:55:07 +0000
    app.openshift.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
    app.quarkus.io/vcs-url: https://github.com/danieloh30/coolstore-kubecon.git
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: inventory
spec:
  host: ""
  path: /
  port:
    targetPort: 8280
  to:
    kind: Service
    name: inventory
